--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 #---
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.url=jdbc:h2:file:./db/shareit
 spring.datasource.username=sa
 spring.datasource.password=sa
 
